[package]
name = "fhcleanup"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
lazy_static = "1.4.0"
regex = "1.3.9"
rusty_pool = "0.4.2"
structopt = "0.3.15"